<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/margin_between_widgets"
    android:paddingRight="@dimen/margin_between_widgets"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/background_light"
    tools:context=".SettingHolidaysActivity">


    <LinearLayout
        android:id="@+id/settingHolidayButtons"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/addHolidayButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_text_add" />

        <Button
            android:id="@+id/editHolidayButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_between_widgets"
            android:layout_weight="1"
            android:text="@string/button_text_edit" />

        <Button
            android:id="@+id/deleteHolidayButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_between_widgets"
            android:layout_weight="1"
            android:text="@string/button_text_delete" />

    </LinearLayout>

    <ListView
        android:id="@+id/holidayList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/saveHolidaysButton"
        android:layout_below="@+id/settingHolidayButtons"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/margin_between_widgets"
        android:choiceMode="singleChoice"
        android:divider="@color/colorPrimary"
        android:dividerHeight="@dimen/list_divider_size"
        android:listSelector="@color/listSelected" />

    <Button
        android:id="@+id/saveHolidaysButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/margin_between_widgets"
        android:text="@string/button_text_save" />

</RelativeLayout>
