<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".SettingDetailsActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/padding_items_horizontal"
        android:paddingRight="@dimen/padding_items_horizontal"
        android:paddingTop="@dimen/padding_items_vertical"
        android:paddingBottom="@dimen/padding_items_vertical"
        android:text="@string/label_setting_appwidget"
        android:id="@+id/labelSettingAppWidget"
        android:textSize="@dimen/text_size_large"
        android:textColor="@color/text_color"
        android:background="@color/colorPrimaryLight"
        android:focusable="true"
        android:focusableInTouchMode="true" >
        <requestFocus/>
    </TextView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_small"
            android:text="@string/label_appwidget_list_size"
            android:id="@+id/appWidgetListSizeTextView" />

        <NumberPicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/margin_between_widgets"
            android:id="@+id/appWidgetListSizePicker" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/padding_items_horizontal"
        android:paddingRight="@dimen/padding_items_horizontal"
        android:paddingTop="@dimen/padding_items_vertical"
        android:paddingBottom="@dimen/padding_items_vertical"
        android:text="@string/label_setting_urls"
        android:id="@+id/labelSettingUrls"
        android:textSize="@dimen/text_size_large"
        android:textColor="@color/text_color"
        android:background="@color/colorPrimaryLight"
        android:layout_marginTop="@dimen/margin_between_widgets" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/settingUrlsContainer"
        android:layout_alignParentLeft="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/settingUrlsContent"/>

    </ScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_text_save"
        android:id="@+id/saveSettingDetailsButton"
        android:layout_marginTop="@dimen/margin_between_widgets"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"/>

</LinearLayout>
