<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/widget_top">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:textSize="@dimen/text_size_large"
            android:id="@+id/widgetFromToTextView" />

        <TextView
            android:id="@+id/widgetDayTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_between_widgets"
            android:layout_weight="3" />

        <ImageButton
            android:id="@+id/imageUpButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_between_widgets"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/button_name_up" />

        <ImageButton
            android:id="@+id/imageDownButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/button_name_down" />

        <ImageButton
            android:id="@+id/imageMiddleButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_between_widgets"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/button_name_mid" />

    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/widgetListView"
        android:divider="@color/background"
        android:dividerHeight="1dp"
        android:background="#80ffffff"/>

</LinearLayout>